--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: '/opt/keycloak/bin/kc.sh start --db-url $DATABASE_URL --http-port $PORT'
+  web: ./startup.sh
